[tool.poetry]
name = "telegram_weather_bot"
version = "0.1.0"
description = "Telegram Weather Bot"
authors = ["Ihor Halytskyi <galytskiyihor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.22.0"
python-dotenv = "1.1.1"
aiohttp = "3.12.15"
apscheduler = "3.11.0"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
isort = "6.0.1"
ruff = "^0.13.0"
mypy = "1.17.1"
pre-commit = "4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
